trunk/Archive2/12/3417b4662b75b2/output
main.cpp: In function 'int main()':
main.cpp:11:32: error: expected ';' before string constant
     std::cout << x << " " << y " " << std::endl;
                                ^
